--- a/EmployeePayroll/EmployeePayroll.WebAPI/EmployeePayroll.WebAPI.csproj
+++ b/EmployeePayroll/EmployeePayroll.WebAPI/EmployeePayroll.WebAPI.csproj
@@ -116,6 +116,7 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\BaseEmployeePayrollController.cs" />
+    <Compile Include="Controllers\DeductionController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
