Added remote mongo connection in backend, added employee deduction functionality to FE

--- a/EmployeePayroll/EmployePayroll.Models/EmployePayroll.Models.csproj
+++ b/EmployeePayroll/EmployePayroll.Models/EmployePayroll.Models.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Deduction.cs" />
+    <Compile Include="EmployeeDeduction.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="IEntityRepository.cs" />
     <Compile Include="Enums.cs" />
