--- a/EmployeePayroll/EmployeePayroll.WebAPI/Web.config
+++ b/EmployeePayroll/EmployeePayroll.WebAPI/Web.config
@@ -9,6 +9,9 @@
     <httpRuntime targetFramework="4.6"/>
   </system.web>
   <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAVModule"/>
+    </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
       <remove name="OPTIONSVerbHandler"/>
@@ -44,9 +47,11 @@
     </compilers>
   </system.codedom>
     <connectionStrings>
-      <add name="mongoConnection" connectionString="mongodb://localhost:27017"/>
+      <add name="localMongoConnection" connectionString="mongodb://localhost:27017"/>
+      <add name="remoteMongoConnection" connectionString="mongodb://admin:datis123@ds111589.mlab.com:11589/employee_payroll"/>
     </connectionStrings>
     <appSettings>
-      <add key="mongoDatabase" value="EmployeePayroll"/>
+      <add key ="local" value="false"/>
+      <add key="mongoDatabase" value="employee_payroll"/>
     </appSettings>
 </configuration>
